--- a/bookmarks/images/templates/images/image/detail.html
+++ b/bookmarks/images/templates/images/image/detail.html
@@ -17,6 +17,9 @@
                     <span class="total">{{ total_likes }}</span>
                     like{{ total_likes|pluralize }}
                 </span>
+                <span class="count">
+                    {{ total_views }} view{{ total_views|pluralize }}
+                </span>
                 <a href="#" data-id="{{ image.id }}" data-action="{% if request.user in users_like %}un{% endif %}like"
                    class="like button">
                     {% if request.user not in users_like %}
@@ -30,10 +33,12 @@
         </div>
         <div class="image-likes">
             {% for user in image.users_like.all %}
-                <div>
-                    <img src="{{ user.profile.photo.url }}">
-                    <p>{{ user.first_name }}</p>
-                </div>
+                    <div>
+                        {% if user.profile.photo %}
+                            <img src="{{ user.profile.photo.url }}">
+                        {% endif %}
+                        <p>{{ user.first_name }}</p>
+                    </div>
             {% empty %}
                 Nobody liked this image yet.
             {% endfor %}
